--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,19 @@
   },
 
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/img/icons/sibyl_16.png",
+      "32": "/img/icons/sibyl_32.png",
+      "48": "/img/icons/sibyl_48.png",
+      "128": "/img/icons/sibyl_128.png"
+    }
+  },
+
+  "icons": {
+    "16": "/img/icons/sibyl_16.png",
+    "32": "/img/icons/sibyl_32.png",
+    "48": "/img/icons/sibyl_48.png",
+    "128": "/img/icons/sibyl_128.png"
   }
 }
