--- a/manifest.json
+++ b/manifest.json
@@ -29,6 +29,8 @@
     }
   },
 
+  "options_page": "options.html",
+
   "icons": {
     "16": "/img/icons/sibyl_16.png",
     "32": "/img/icons/sibyl_32.png",
