--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
     "tabs",
     "activeTab",
     "storage",
-    "declarativeContent"
+    "declarativeContent",
+    "https://marknolledo.pythonanywhere.com/*"
   ],
 
   "background": {
