--- a/manifest.json
+++ b/manifest.json
@@ -23,19 +23,19 @@
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/img/icons/sibyl_16.png",
-      "32": "/img/icons/sibyl_32.png",
-      "48": "/img/icons/sibyl_48.png",
-      "128": "/img/icons/sibyl_128.png"
+      "16": "/img/icons/sibyl-type2_16.png",
+      "32": "/img/icons/sibyl-type2_32.png",
+      "48": "/img/icons/sibyl-type2_48.png",
+      "128": "/img/icons/sibyl-type2_128.png"
     }
   },
 
   "options_page": "options.html",
 
   "icons": {
-    "16": "/img/icons/sibyl_16.png",
-    "32": "/img/icons/sibyl_32.png",
-    "48": "/img/icons/sibyl_48.png",
-    "128": "/img/icons/sibyl_128.png"
+    "16": "/img/icons/sibyl-type2_16.png",
+    "32": "/img/icons/sibyl-type2_32.png",
+    "48": "/img/icons/sibyl-type2_48.png",
+    "128": "/img/icons/sibyl-type2_128.png"
   }
 }
